--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architectures</title>
     <link rel="stylesheet" href="./assets/style.css">
+    
 </head>
-<body>
+<body class="work-sans-font">
+    <header>
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
+    </header>
     
 </body>
 </html>
