--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
             <img class="banner-image" src="./assets/banner.png" alt="banner">
         </div>
     </header>
+
+    <main>
+        <section class="teams display-flex" >
+            <div class="team-img-container">
+                <img src="./assets/team1.png" alt="team-1">
+                <img src="./assets/team2.png" alt="team-2">
+                <img src="./assets/team3.png" alt="team-3">
+                <img src="./assets/team4.png" alt="team-4">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span>Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
